--- a/README.org
+++ b/README.org
@@ -1,10 +1,9 @@
 * lisp-invocation
 
+A small library for starting processes from LISP.
 
-
-|---------+-------------------------------------------|
-| source  | git:https://gitlab.common-lisp.net/qitab/lisp-invocation.git   |
-| commit  |   |
-| systems | lisp-invocation |
-|---------+-------------------------------------------|
-
+|---------+--------------------------------------------------------------|
+| source  | git:https://gitlab.common-lisp.net/qitab/lisp-invocation.git |
+| commit  | ebf543ca17422dfbb51609f5b6d35a98c5f07449                                                             |
+| systems | lisp-invocation                                              |
+|---------+--------------------------------------------------------------|
